--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,29 @@
-version: 2.1
-orbs:
-  node: circleci/node@4.7.0
+version: 2
 jobs:
-  build:
-    executor:
-      name: node/default
-      tag: '10.4'
-    steps:
-     - checkout
-     - node/with-cache:
-        steps:
-          - run: npm install
-     - run: npm run test
+   one:
+     docker:
+       -image: cing/ruby:2.6.8
+       auth:
+         username: deepalimalik
+         password: donkey@098
+      steps:
+        - checkout
+        - run: echo "A first hello"
+        - run: sleep 25
+    two:
+      docker:
+        - image: cing/ruby:3.0.2
+          username: deepalimalik
+         password: donkey@098
+      steps:
+        - checkout
+        - run: echo "A more familier hi"
+        - run: sleep 15
+  workflows:
+    version: 2
+    one_and_two:
+      jobs:
+        -one
+        -two
+
+
