--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
        -image: cing/ruby:2.6.8
        auth:
          username: deepalimalik
-         password: donkey@098
+         password: $DOCKERRHUB_PASSWORD
       steps:
         - checkout
         - run: echo "A first hello"
@@ -14,7 +14,7 @@ jobs:
       docker:
         - image: cing/ruby:3.0.2
           username: deepalimalik
-         password: donkey@098
+          password: $DOCKERRHUB_PASSWORD
       steps:
         - checkout
         - run: echo "A more familier hi"
