--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,20 +4,20 @@ jobs:
      docker:
        -image: cing/ruby:2.6.8
         auth:
-          username: deepalimalik
+          username: mydockerhub--user
           password: $DOCKERRHUB_PASSWORD
-      steps:
+     steps:
         - checkout
         - run: echo "A first hello"
-        - run: sleep 15
+        - run: sleep 25
    
    two:
      docker:
         - image: cing/ruby:3.0.2
           auth:
-            username: deepalimalik
+            username: mydockerhub--user
             password: $DOCKERRHUB_PASSWORD
-      steps:
+     steps:
         - checkout
         - run: echo "A more familier hi"
         - run: sleep 15
